[gd_scene load_steps=3 format=3 uid="uid://debugmodal"]

[ext_resource type="Theme" uid="uid://brmsm8x6ntpna" path="res://theme/furnace_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/ui/debug_modal.gd" id="2_script"]

[node name="DebugModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenu" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="ExportButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 28)
layout_mode = 2
text = "Export Level"

[node name="GoToLevelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 28)
layout_mode = 2
text = "Go to Level..."

[node name="RestartLevelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 28)
layout_mode = 2
text = "Restart Level"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
layout_mode = 2

[node name="PlaceSpawnButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 28)
layout_mode = 2
text = "Place Spawn Point"

[node name="PlaceTerrainButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 28)
layout_mode = 2
text = "Place Terrain"

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
layout_mode = 2

[node name="InfiniteMoneyToggle" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 28)
layout_mode = 2
text = "Infinite Money"

[node name="LevelSubmenu" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 4

[node name="SubtitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/LevelSubmenu"]
layout_mode = 2
text = "Select Level:"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/LevelSubmenu"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="LevelList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/LevelSubmenu/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/LevelSubmenu"]
unique_name_in_owner = true
layout_mode = 2
text = "< Back"
